--- a/Clementine/nbproject/project.properties
+++ b/Clementine/nbproject/project.properties
@@ -37,13 +37,37 @@ dist.jlink.output=${dist.jlink.dir}/Clementine
 endorsed.classpath=
 excludes=
 file.reference.controlsfx-8.40.13.jar=C:\\Program Files\\Java\\javafx-sdk-16\\lib\\controlsfx-8.40.13.jar
+file.reference.controlsfx-8.40.13.jar-1=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\controlsfx-8.40.13.jar
+file.reference.controlsfx-samples-8.40.13.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\controlsfx-samples-8.40.13.jar
+file.reference.fxsampler-1.0.10.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\fxsampler-1.0.10.jar
+file.reference.javafx-swt.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\javafx.web.jar
+file.reference.jfoenix-8.0.10.jar=D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib\\jfoenix-8.0.10.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.JavaFX16.classpath}:\
-    ${file.reference.controlsfx-8.40.13.jar}
+    ${file.reference.controlsfx-8.40.13.jar}:\
+    ${file.reference.controlsfx-8.40.13.jar-1}:\
+    ${file.reference.controlsfx-samples-8.40.13.jar}:\
+    ${file.reference.fxsampler-1.0.10.jar}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -100,14 +124,14 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_16
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Program Files\\Java\\javafx-sdk-16\\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media
+run.jvmargs=--module-path "D:\\Software Files\\jdk 16\\javafx-sdk-16\\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
